--- a/woah.html
+++ b/woah.html
@@ -7,7 +7,7 @@
             <h1>Show me what you got!</h1>
             <h1>Where's season 3?</h1>
         </body>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8" frameborder="0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JGwWNGJdvx8?t=3m20s" frameborder="0" allowfullscreen></iframe>
    </html>
 
 
